--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
+    "@ant-design/icons": "^5.5.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.11.8",
+    "mini-svg-data-uri": "^1.4.4",
+    "next": "14.2.15",
+    "react": "^18.3.1",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "react-lottie": "^1.2.4",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "typescript": "^5",
