--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.8",
+    "framer-motion": "^10",
+    "lucide-react": "^0.452.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.15",
     "react": "^18.3.1",
     "react-dom": "^18",
+    "react-github-calendar": "^4.4.1",
     "react-lottie": "^1.2.4",
     "tailwind-merge": "^2.5.4"
   },
