--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
-    "framer-motion": "^10",
+    "framer-motion": "12.0.0-alpha.0",
     "lucide-react": "^0.452.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.15",
+    "querystring": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-github-calendar": "^4.4.1",
     "react-lottie": "^1.2.4",
+    "spotify-web-api-node": "^5.0.2",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
