--- a/package.json
+++ b/package.json
@@ -10,21 +10,29 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "framer-motion": "12.0.0-alpha.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.452.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.15",
+    "next-mdx-remote": "^5.0.0",
     "querystring": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-github-calendar": "^4.5.7",
     "react-lottie": "^1.2.10",
+    "rehype-highlight": "^7.0.2",
+    "rehype-pretty-code": "^0.14.1",
+    "shiki": "^3.4.2",
     "spotify-web-api-node": "^5.0.2",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "22.15.17",
     "@types/react-dom": "^18.3.7",
     "eslint": "^8.57.1",
