--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "12.0.0-alpha.0",
     "gray-matter": "^4.0.3",
-    "lucide-react": "^0.452.0",
+    "lucide-react": "^0.511.0",
     "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.12.1",
     "next": "14.2.15",
     "next-mdx-remote": "^5.0.0",
     "querystring": "^0.2.1",
@@ -29,7 +31,8 @@
     "rehype-pretty-code": "^0.14.1",
     "shiki": "^3.4.2",
     "spotify-web-api-node": "^5.0.2",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
