--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^5.6.1",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
+    "@types/mousetrap": "^1.6.15",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -20,6 +21,7 @@
     "lucide-react": "^0.511.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.12.1",
+    "mousetrap": "^1.6.5",
     "next": "14.2.15",
     "next-mdx-remote": "^5.0.0",
     "querystring": "^0.2.1",
