--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^5.6.1",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
+    "@shikijs/themes": "^3.4.2",
     "@types/mousetrap": "^1.6.15",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
@@ -31,7 +32,9 @@
     "react-lottie": "^1.2.10",
     "rehype-highlight": "^7.0.2",
     "rehype-pretty-code": "^0.14.1",
+    "remark-gfm": "^4.0.1",
     "shiki": "^3.4.2",
+    "shiki-themes": "^0.2.7",
     "spotify-web-api-node": "^5.0.2",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7"
