--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "12.0.0-alpha.0",
     "gray-matter": "^4.0.3",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.511.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.12.1",
