--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@shikijs/themes": "^3.4.2",
     "@types/mousetrap": "^1.6.15",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/blob": "^1.1.1",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
