--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/mousetrap": "^1.6.15",
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^1.1.1",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
