--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "shiki-themes": "^0.2.7",
     "spotify-web-api-node": "^5.0.2",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
