--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -17,7 +17,6 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^1.1.1",
     "@vercel/speed-insights": "^1.2.0",
-    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "12.0.0-alpha.0",
@@ -27,29 +26,27 @@
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.12.1",
     "mousetrap": "^1.6.5",
-    "next": "14.2.15",
+    "next": "^15.3.4",
     "next-mdx-remote": "^5.0.0",
     "querystring": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-github-calendar": "^4.5.7",
-    "react-lottie": "^1.2.10",
     "rehype-highlight": "^7.0.2",
     "rehype-pretty-code": "^0.14.1",
     "remark-gfm": "^4.0.1",
     "shiki": "^3.4.2",
     "shiki-themes": "^0.2.7",
-    "spotify-web-api-node": "^5.0.2",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "22.15.17",
+    "@types/node": "^24.0.3",
     "@types/react-dom": "^18.3.7",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.15",
+    "eslint": "^9.29.0",
+    "eslint-config-next": "^15.3.4",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17"
   }
