--- a/package.json
+++ b/package.json
@@ -1,56 +1,35 @@
 {
-  "name": "web",
+  "name": "bun-react-template",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
+  "main": "src/index.tsx",
+  "module": "src/index.tsx",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "bun --hot src/index.tsx",
+    "start": "NODE_ENV=production bun src/index.tsx",
+    "build": "bun run build.ts"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.6.1",
-    "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
-    "@next/bundle-analyzer": "^15.3.4",
-    "@shikijs/themes": "^3.4.2",
-    "@types/mousetrap": "^1.6.15",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/blob": "^1.1.1",
-    "@vercel/kv": "^3.0.0",
-    "@vercel/speed-insights": "^1.2.0",
+    "@hookform/resolvers": "^4.1.0",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "bun-plugin-tailwind": "^0.0.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "12.0.0-alpha.0",
-    "gray-matter": "^4.0.3",
-    "gsap": "^3.13.0",
-    "lucide-react": "^0.511.0",
-    "mini-svg-data-uri": "^1.4.4",
-    "motion": "^12.12.1",
-    "mousetrap": "^1.6.5",
-    "next": "^15.3.4",
-    "next-mdx-remote": "^5.0.0",
-    "querystring": "^0.2.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-github-calendar": "^4.5.7",
-    "redis": "^5.5.6",
-    "rehype-highlight": "^7.0.2",
-    "rehype-pretty-code": "^0.14.1",
-    "remark-gfm": "^4.0.1",
-    "shiki": "^3.4.2",
-    "shiki-themes": "^0.2.7",
-    "tailwind-merge": "^3.3.0",
+    "lucide-react": "^0.475.0",
+    "react": "^19",
+    "react-dom": "^19",
+    "react-hook-form": "^7.54.2",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
-    "usehooks-ts": "^3.1.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^24.0.3",
-    "@types/react-dom": "^18.3.7",
-    "eslint": "^9.29.0",
-    "eslint-config-next": "^15.3.4",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17"
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@types/bun": "latest"
   }
 }
