--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
+		"@types/bun": "latest",
 		"@types/react": "^19",
-		"@types/react-dom": "^19",
-		"@types/bun": "latest"
+		"@types/react-dom": "^19"
 	}
 }
